--- a/Desafio1/index.html
+++ b/Desafio1/index.html
@@ -8,9 +8,9 @@
 </head>
 <body>
     <h1>Clique em algum botão</h1>
-    <button id="primeiro">Botao 1</button>
-    <button id="segundo">Botao 2</button>
-    <button id="terceiro">Botao 3</button>
+    <button id="primeiro">Botão 1</button>
+    <button id="segundo">Botão 2</button>
+    <button id="terceiro">Botão 3</button>
     <script src="script.js"></script>
 </body>
 </html>
